# Banking-Management-System

./: .gitignore  CMakeLists.txt  README.md  a.out  adminCreator.c  client.c  db.h  inputFromClient.txt  mermaid class diagram  ocr.c  readAdmin.c  server.c
admin/: adminoptions.h  admintasks.c  admintasks.h
customer/: customeroptions.h  customertasks.h
datetime_ot/: datetimetasks.h  ottasks.h
db/: admins.txt  datetimetasks.h  db.h  employees.txt  ottasks.h
employee/: empoptions.h  emptasks.h
loans/: loanoptions.h  loantasks.h
transactions/: transoptions.h  transtasks.h
